# cyclone-HTTPServer

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  index.html  test_cache_demo  test_cache_demo.cpp  test_database.sql
AIApps/ChatServer/include/: ChatServer.h
AIApps/ChatServer/include/AIUtil/: AIHelper.h  ImageRecognizer.h  MQManager.h
AIApps/ChatServer/include/handlers/: AIMenuHandler.h  AIUploadHandler.h  AIUploadSendHandler.h  ChatEntryHandler.h  ChatHandler.h  ChatHistoryHandler.h  ChatLoginHandler.h  ChatLogoutHandler.h  ChatRegisterHandler.h  ChatSendHandler.h
AIApps/ChatServer/src/: ChatServer.cpp  main.cpp
AIApps/ChatServer/src/AIUtil/: AIHelper.cpp  ImageRecognizer.cpp  MQManager.cpp  base64.cpp
AIApps/ChatServer/src/handlers/: AIMenuHandler.cpp  AIUploadHandler.cpp  AIUploadSendHandler.cpp  ChatEntryHandler.cpp  ChatHandler.cpp  ChatHistoryHandler.cpp  ChatLoginHandler.cpp  ChatLogoutHandler.cpp  ChatRegisterHandler.cpp  ChatSendHandler.cpp
HttpServer/include/: CorsConfig.hpp  CorsMiddleware.hpp  DbConnection.hpp  DbConnectionPool.hpp  DbException.hpp  HttpContext.hpp  HttpRequest.hpp  HttpResponse.hpp  HttpServer.hpp  HttpTypes.hpp  KICachePolicy.hpp  KLruCache.hpp  Middleware.hpp  MiddlewareChain.hpp  MysqlUtil.hpp  Router.hpp  RouterHandler.hpp  Session.hpp  SessionManager.hpp  SessionStorage.hpp  SslConfig.hpp  SslConnection.hpp  SslContext.hpp
HttpServer/include/Cache/: CacheConfig.hpp  CacheTypes.hpp  CachedResponse.hpp
HttpServer/include/MemoryPool/: CentralCache.h  Common.h
HttpServer/src/: CorsMiddleware.cpp  DbConnection.cpp  DbConnectionPool.cpp  HttpContext.cpp  HttpRequest.cpp  HttpResponse.cpp  HttpServer.cpp  MiddlewareChain.cpp  Router.cpp  Session.cpp  SessionManager.cpp  SslConfig.cpp  SslConnection.cpp  SslContext.cpp
HttpServer/src/Cache/: CachedResponse.cpp
HttpServer/src/MemoryPool/: CentralCache.cpp  PageCache.cpp  ThreadCache.cpp
WebApps/GomokuServer/include/: GomokuServer.h
WebApps/GomokuServer/src/handlers/: LoginHandler.cpp
WebApps/MemeServer/backend/include/: JsonResponse.hpp  MemeServer.hpp
WebApps/MemeServer/backend/include/handlers/: AuthHandler.hpp  LeaderboardHandler.hpp  TestHandler.hpp  UserHandler.hpp
WebApps/MemeServer/backend/src/: MemeServer.cpp  main.cpp
WebApps/MemeServer/backend/src/handlers/: AuthHandler.cpp  EntryHandler.cpp  LeaderboardHandler.cpp  TestDbConHandler.cpp  TestHandler.cpp  UserHandler.cpp
WebApps/MemeServer/database/: schema.sql  test_data.sql
WebApps/MemeServer/front/: index.html  package-lock.json
WebApps/MemeServer/front/src/: App.vue  main.js
WebApps/MemeServer/front/src/components/: CategoriesSection.vue  FooterSection.vue  HeroSection.vue  LeaderboardSection.vue  Navigation.vue  ProfileSection.vue  QuizSection.vue  ResultsSection.vue
WebApps/MemeServer/front/src/http/: index.js
WebApps/MemeServer/front/src/router/: index.js
WebApps/MemeServer/front/src/views/: HomeView.vue  LoginView.vue
WebApps/SimpleServer/backend/include/: MemeServer.hpp
WebApps/SimpleServer/backend/include/handlers/: EntryHandler.hpp  TestDbConHandler.hpp
WebApps/SimpleServer/backend/src/: MemeServer.cpp  main.cpp
WebApps/SimpleServer/backend/src/handlers/: EntryHandler.cpp  TestDbConHandler.cpp
